@@ -1,7 +1,3 @@
-/*
- * This file was generated by the Gradle 'init' task.
- */
-
 plugins {
     id 'java'
     id 'eclipse'
@@ -11,6 +7,7 @@ plugins {
     id "com.github.ben-manes.versions" version "0.21.0"
     //id "io.freefair.lombok" version "3.1.4"
     id 'net.ltgt.apt' version '0.21'
+    id 'org.beryx.jlink' version '2.9.4'
 }
 
 repositories {
@@ -18,14 +15,6 @@ repositories {
     maven { url = 'http://jcenter.bintray.com' }
     maven { url = 'http://repo.maven.apache.org/maven2' }
     maven { url 'https://projectlombok.org/edge-releases' }
-}
-
-javafx {
-    modules = [ 'javafx.controls',
-    			'javafx.fxml',
-    			'javafx.graphics',
-    			'javafx.swing',
-    			'javafx.web']
 }
 
 dependencies {
@@ -47,6 +36,15 @@ dependencies {
     
 	annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
     annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.0.Final'
+}
+
+javafx {
+    modules = [ 'javafx.controls',
+    			'javafx.fxml',
+    			'javafx.graphics',
+    			'javafx.swing',
+    			'javafx.web',
+    			'javafx.media' ]
 }
 
 eclipse {
@@ -81,3 +79,23 @@ jar {
     }
     inputs.property("moduleName", moduleName)
 }
+
+jlink {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        name = 'jrpg'
+        jvmArgs = ['--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix', '--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix', '--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix', '--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix', '--add-exports javafx.base/com.sun.javafx.event=com.jfoenix -Dprism.verbose=true']
+        
+    }
+    addExtraDependencies("javafx")
+    
+}
+
+/*
+tasks.jlink.doLast {
+    copy {
+        from('src/main/resources')
+        into("$buildDir/image/bin")
+    }
+} */
+
